--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,37 @@
 {
-  "env": {
-        "browser": true,
-        "node": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true
-        },
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
-}
+    "env": {
+          "browser": true,
+          "node": true,
+          "es6": true
+      },
+      "extends": "eslint:recommended",
+      "parserOptions": {
+          "ecmaFeatures": {
+              "experimentalObjectRestSpread": true,
+              "jsx": true
+          },
+          "sourceType": "module"
+      },
+      "plugins": [
+          "react"
+      ],
+      "rules": {
+        "react/jsx-uses-vars": 2,
+          "indent": [
+              "error",
+              2
+          ],
+          "linebreak-style": [
+              "error",
+              "unix"
+          ],
+          "quotes": [
+              "error",
+              "single"
+          ],
+          "semi": [
+              "error",
+              "always"
+          ]
+      }
+  }
