--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: node_js
 node_js:
   - "iojs"
   - "7"
-after_success:
-  - coveralls
+  
+script:
+  - npm test -- --coverage
+
+after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
